{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 26,
  "lineage": "1dad50a4-e3ad-6a84-ac8d-0a3c6a6da448",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "FYP-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/aa0a009d-a1f5-4b10-a579-9e3a6e67cda6/resourceGroups/FYP-resources/providers/Microsoft.Network/networkInterfaces/FYP-nic",
            "internal_domain_name_suffix": "xs2fpgypozyurjadpugbtr41ze.hx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/aa0a009d-a1f5-4b10-a579-9e3a6e67cda6/resourceGroups/FYP-resources/providers/Microsoft.Network/publicIPAddresses/FYP-ip",
                "subnet_id": "/subscriptions/aa0a009d-a1f5-4b10-a579-9e3a6e67cda6/resourceGroups/FYP-resources/providers/Microsoft.Network/virtualNetworks/FYP-network/subnets/FYP-subnet"
              }
            ],
            "location": "eastasia",
            "mac_address": "00-22-48-1A-03-F2",
            "name": "FYP-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "FYP-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/aa0a009d-a1f5-4b10-a579-9e3a6e67cda6/resourceGroups/FYP-resources/providers/Microsoft.Compute/virtualMachines/FYP-VM-test"
          },
          "dependencies": [
            "azurerm_public_ip.FYP-ip",
            "azurerm_resource_group.FYP",
            "azurerm_subnet.FYP-subnet",
            "azurerm_virtual_network.FYP-VN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "FYP-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/aa0a009d-a1f5-4b10-a579-9e3a6e67cda6/resourceGroups/FYP-resources/providers/Microsoft.Network/networkSecurityGroups/FYP-sg",
            "location": "eastasia",
            "name": "FYP-sg",
            "resource_group_name": "FYP-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "FYP-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.FYP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "FYP-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/aa0a009d-a1f5-4b10-a579-9e3a6e67cda6/resourceGroups/FYP-resources/providers/Microsoft.Network/networkSecurityGroups/FYP-sg/securityRules/FYP-dev-rule",
            "name": "FYP-dev-rule",
            "network_security_group_name": "FYP-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "FYP-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.FYP-sg",
            "azurerm_resource_group.FYP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "FYP-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/aa0a009d-a1f5-4b10-a579-9e3a6e67cda6/resourceGroups/FYP-resources/providers/Microsoft.Network/publicIPAddresses/FYP-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.239.88.49",
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "FYP-ip",
            "resource_group_name": "FYP-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.FYP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "FYP-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/aa0a009d-a1f5-4b10-a579-9e3a6e67cda6/resourceGroups/FYP-resources/providers/Microsoft.Network/virtualNetworks/FYP-network/subnets/FYP-subnet",
            "name": "FYP-subnet",
            "resource_group_name": "FYP-resources",
            "virtual_network_name": "FYP-network"
          },
          "dependencies": [
            "azurerm_resource_group.FYP",
            "azurerm_virtual_network.FYP-VN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "FYP-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/aa0a009d-a1f5-4b10-a579-9e3a6e67cda6/resourceGroups/FYP-resources/providers/Microsoft.Network/virtualNetworks/FYP-network/subnets/FYP-subnet",
            "network_security_group_id": "/subscriptions/aa0a009d-a1f5-4b10-a579-9e3a6e67cda6/resourceGroups/FYP-resources/providers/Microsoft.Network/networkSecurityGroups/FYP-sg",
            "subnet_id": "/subscriptions/aa0a009d-a1f5-4b10-a579-9e3a6e67cda6/resourceGroups/FYP-resources/providers/Microsoft.Network/virtualNetworks/FYP-network/subnets/FYP-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.FYP-sg",
            "azurerm_resource_group.FYP",
            "azurerm_subnet.FYP-subnet",
            "azurerm_virtual_network.FYP-VN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "FYP-VN",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9b57b8bc-760f-4871-a403-7d0c19c7dbcc",
            "id": "/subscriptions/aa0a009d-a1f5-4b10-a579-9e3a6e67cda6/resourceGroups/FYP-resources/providers/Microsoft.Network/virtualNetworks/FYP-network",
            "location": "eastasia",
            "name": "FYP-network",
            "resource_group_name": "FYP-resources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/aa0a009d-a1f5-4b10-a579-9e3a6e67cda6/resourceGroups/FYP-resources/providers/Microsoft.Network/virtualNetworks/FYP-network/subnets/FYP-subnet",
                "name": "FYP-subnet",
                "security_group": "/subscriptions/aa0a009d-a1f5-4b10-a579-9e3a6e67cda6/resourceGroups/FYP-resources/providers/Microsoft.Network/networkSecurityGroups/FYP-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.FYP"
          ]
        }
      ]
    }
  ]
}